require-non-root.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"kyverno.io/v1","kind":"ClusterPolicy","metadata":{"annotations":{},"name":"require-non-root"},"spec":{"background":true,"rules":[{"match":{"any":[{"resources":{"kinds":["Pod"]}}]},"name":"check-run-as-non-root","validate":{"message":"Containers must run as non-root.","pattern":{"spec":{"securityContext":{"runAsNonRoot":true}}}}}],"validationFailureAction":"Enforce"}}
  creationTimestamp: "2026-07-29T07:48:47Z"
  generation: 1
  name: require-non-root
  resourceVersion: "19129"
  uid: 804473f2-3f4a-4d22-808a-fba789d52ba5
spec:
  admission: true
  background: true
  emitWarning: false
  rules:
  - match:
      any:
      - resources:
          kinds:
          - Pod
    name: check-run-as-non-root
    skipBackgroundRequests: true
    validate:
      allowExistingViolations: true
      message: Containers must run as non-root.
      pattern:
        spec:
          securityContext:
            runAsNonRoot: true
  validationFailureAction: Enforce
status:
  autogen:
    rules:
    - match:
        any:
        - resources:
            kinds:
            - apps/v1/DaemonSet
            - apps/v1/Deployment
            - batch/v1/Job
            - apps/v1/ReplicaSet
            - v1/ReplicationController
            - apps/v1/StatefulSet
        resources: {}
      name: autogen-check-run-as-non-root
      skipBackgroundRequests: true
      validate:
        allowExistingViolations: true
        message: Containers must run as non-root.
        pattern:
          spec:
            template:
              spec:
                securityContext:
                  runAsNonRoot: true
    - match:
        any:
        - resources:
            kinds:
            - batch/v1/CronJob
        resources: {}
      name: autogen-cronjob-check-run-as-non-root
      skipBackgroundRequests: true
      validate:
        allowExistingViolations: true
        message: Containers must run as non-root.
        pattern:
          spec:
            jobTemplate:
              spec:
                template:
                  spec:
                    securityContext:
                      runAsNonRoot: true
  conditions:
  - lastTransitionTime: "2026-07-29T12:54:37Z"
    message: Ready
    reason: Succeeded
    status: "True"
    type: Ready
  rulecount:
    generate: 0
    mutate: 0
    validate: 1
    verifyimages: 0
  validatingadmissionpolicy:
    generated: false
    message: skip generating ValidatingAdmissionPolicy for non CEL rules.
